--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "nodejs",
+  "name": "node",
   "version": "1.0.0",
   "description": "",
-  "main": "myfirst.js",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon app.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "mongodb": "^3.6.3",
-    "mongoose": "^5.11.11",
-    "nodemon": "^2.0.7",
-    "prompt": "^1.1.0"
+    "mongoose": "^5.13.3",
+    "nodemon": "^2.0.12"
   }
 }
